# GeomAlgLib

./: GeomAlgLib.cabal  LICENSE  README.md
src/: AdaptTriangulation.hs  Assocs.hs  ChansConvexHull.hs  Circle.hs  ConvexTriangulation.hs  Delaunay.hs  DelaunayDAG.hs  Divide.hs  EventStructureSpec.hs  GareysTriangulation.hs  GrahamsScan.hs  JarvisMarch.hs  KDTree.hs  KETTriangulation.hs  KirkpatrickSeidelHull.hs  Line.hs  MergeHull.hs  MergeTriangulation.hs  MetaPost.hs  MonotoneTriangulation.hs  NaiveTriangulation.hs  Pertub.hs  Point.hs  Point1.hs  Point2.hs  Point3.hs  Point4.hs  PointClass.hs  PointN.hs  Polar.hs  Polygon.hs  Polygon.lhs  QEDS.hs  QEDSbasics.hs  QEDSstatic.hs  RangeTree.hs  SegmentIntersection.hs  StatusStructureSpec.hs  Triangle.hs  Voronoi.hs
src/Applications/: AllNearest.hs  ClosestPair.hs  DelaunayHull.hs  MaxEmptyCircle.hs  NearestPoint.hs  OnionLayers.hs
src/Basics/: DoubleEps.hs  DynamicArray.hs  FiniteMapOld.hs  ListCat.hs  OrderStat.hs  Pretty.hs  QSort.hs  STUtils.hs  Sort.hs  Sorting.hs  Topped.hs  Utilities.hs
src/OpenGL/: GL_ConvexHulls.hs
src/Tests/: ConvexHulls.hs  Test.hs  Triangulations.hs  VoronoiDelaunay.hs
test/: KDTreeSpec.hs  Point1Spec.hs  Point2Spec.hs  Point3Spec.hs  Point4Spec.hs
